--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,32 @@
 services:
-  go:
+  #  go:
+  #    build:
+  #      context: .
+  #      dockerfile: Docker/go/Dockerfile
+  #    container_name: go
+  #    ports:
+  #      - "80:80"
+  #    volumes:
+  #      - ./:/app
+  db:
     build:
       context: .
-      dockerfile: ./Docker/Dockerfile
-    container_name: go
+      dockerfile: Docker/postgresql/Dockerfile
     ports:
-      - "80:80"
+      - "5432:5432"
+    # set shared memory limit when using docker-compose
+    shm_size: 128mb
     volumes:
-      - ./:/app
+      - ./db/data:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      TZ: "Asia/Tokyo"
+      PGDATA: /var/lib/postgresql/data/pgdata
+
+#  adminer:
+#    image: adminer
+#    restart: always
+#    ports:
+#      - "8080:8080"
