--- a/compose.yml
+++ b/compose.yml
@@ -4,23 +4,26 @@ services:
       context: .
       dockerfile: docker/go/Dockerfile
     container_name: go
+    env_file:
+      - docker/go/.env
     ports:
       - "8080:8080"
     volumes:
       - ./:/app
-#  db:
-#    build:
-#      context: .
-#      dockerfile: docker/postgresql/Dockerfile
-#    ports:
-#      - "5432:5432"
-#    # set shared memory limit when using docker-compose
-#    shm_size: 128mb
-#    volumes:
-#      - ./db/data:/var/lib/postgresql/data
-#      - ./db/init:/docker-entrypoint-initdb.d
-#    environment:
-#      POSTGRES_USER: "postgres"
-#      POSTGRES_PASSWORD: "postgres"
-#      TZ: "Asia/Tokyo"
-#      PGDATA: /var/lib/postgresql/data/pgdata
+  db:
+    container_name: postgres
+    build:
+      context: .
+      dockerfile: docker/postgresql/Dockerfile
+    ports:
+      - "5432:5432"
+    # set shared memory limit when using docker-compose
+    shm_size: 128mb
+    volumes:
+      - ./docker/postgresql/data:/var/lib/postgresql/data
+      - ./docker/postgresql/init:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      TZ: "Asia/Tokyo"
+      PGDATA: /var/lib/postgresql/data/pgdata
